--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,71 +4,143 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/background"
     tools:context=".MainActivity">
 
-    <Button
-        android:id="@+id/redButton"
-        android:layout_width="205dp"
-        android:layout_height="250dp"
-        android:background="#80FF0000"
-        app:layout_constraintBottom_toTopOf="@+id/greenButton"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <Button
-        android:id="@+id/yellowButton"
-        android:layout_width="205dp"
-        android:layout_height="250dp"
-        android:background="#80FFFF00"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
-
-    <Button
-        android:id="@+id/greenButton"
-        android:layout_width="205dp"
-        android:layout_height="250dp"
-        android:background="#8000FF00"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <Button
-        android:id="@+id/blueButton"
-        android:layout_width="205dp"
-        android:layout_height="250dp"
-        android:background="#800000FF"
-        app:layout_constraintBottom_toTopOf="@+id/yellowButton"
-        app:layout_constraintEnd_toEndOf="parent" />
-
     <TextView
-        android:id="@+id/scoreLabel"
+        android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Score:"
-        android:textColor="#000000"
-        android:textSize="36sp"
+        android:layout_marginTop="50dp"
+        android:layout_marginBottom="40dp"
+        android:fontFamily="@font/holtwood_one_sc"
+        android:text="@string/title"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        android:textSize="30sp"
+        android:typeface="sans"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="Memory Jogger" />
 
-    <TextView
-        android:id="@+id/scoreView"
+    <LinearLayout
+        android:id="@+id/linearLayout"
+        style="?android:attr/buttonBarStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
-        android:text="0"
-        android:textColor="#000000"
-        android:textSize="36sp"
-        app:layout_constraintStart_toEndOf="@+id/scoreLabel"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginBottom="225dp"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/blueButton"
+                style="?android:attr/buttonBarButtonStyle"
+                android:layout_width="175dp"
+                android:layout_height="175dp"
+                android:background="#3349FF" />
+
+            <Button
+                android:id="@+id/redButton"
+                style="?android:attr/buttonBarButtonStyle"
+                android:layout_width="175dp"
+                android:layout_height="175dp"
+                android:background="#FF4933" />
+        </LinearLayout>
+
+        <LinearLayout
+            style="?android:attr/buttonBarStyle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/greenButton"
+                style="?android:attr/buttonBarButtonStyle"
+                android:layout_width="175dp"
+                android:layout_height="175dp"
+                android:background="#33FF46" />
+
+            <Button
+                android:id="@+id/yellowButton"
+                style="?android:attr/buttonBarButtonStyle"
+                android:layout_width="175dp"
+                android:layout_height="175dp"
+                android:background="#D7FF33" />
+        </LinearLayout>
+
+    </LinearLayout>
 
     <Button
         android:id="@+id/startButton"
-        android:layout_width="410dp"
-        android:layout_height="75dp"
-        android:text="Start"
-        android:textColor="#000000"
-        android:textSize="30sp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:layout_marginLeft="32dp"
+        android:layout_marginTop="45dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginRight="32dp"
+        android:layout_marginBottom="125dp"
+        android:background="@android:color/holo_blue_bright"
+        android:fontFamily="@font/holtwood_one_sc"
+        android:gravity="center"
+        android:text="@string/start"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="96dp" />
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
+
+    <TextView
+        android:id="@+id/scoreText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="130dp"
+        android:layout_marginLeft="130dp"
+        android:layout_marginTop="40dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginBottom="40dp"
+        android:fontFamily="@font/holtwood_one_sc"
+        android:text="@string/score"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/scoreNum"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/startButton"
+        tools:text="Score:" />
+
+    <TextView
+        android:id="@+id/scoreNum"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="40dp"
+        android:layout_marginEnd="146dp"
+        android:layout_marginRight="146dp"
+        android:layout_marginBottom="40dp"
+        android:fontFamily="@font/holtwood_one_sc"
+        android:text="@string/scoreNum"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/scoreText"
+        app:layout_constraintTop_toBottomOf="@+id/startButton"
+        tools:text="0" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
