--- a/app/src/main/res/layout/play_layout.xml
+++ b/app/src/main/res/layout/play_layout.xml
@@ -59,14 +59,18 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:background="#80FF0000" />
+            android:background="#80FF0000"
+            android:textColor="#000000"
+            android:textSize="24sp" />
 
         <Button
             android:id="@+id/blueButton"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:background="#800000FF" />
+            android:background="#800000FF"
+            android:textColor="#000000"
+            android:textSize="24sp" />
 
     </LinearLayout>
     <LinearLayout
@@ -79,14 +83,18 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:background="#8000FF00" />
+            android:background="#8000FF00"
+            android:textColor="#000000"
+            android:textSize="24sp" />
 
         <Button
             android:id="@+id/yellowButton"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:background="#80FFFF00" />
+            android:background="#80FFFF00"
+            android:textColor="#000000"
+            android:textSize="24sp" />
 
     </LinearLayout>
 </LinearLayout>
