--- a/app/src/main/res/layout/quick_menu.xml
+++ b/app/src/main/res/layout/quick_menu.xml
@@ -14,7 +14,8 @@
         android:text="PLAY"
         android:textColor="#E6E6E6"
         android:textSize="24sp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="203dp" />
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
