--- a/app/src/main/res/layout/quick_menu.xml
+++ b/app/src/main/res/layout/quick_menu.xml
@@ -9,11 +9,17 @@
 
     <Button
         android:id="@+id/playMenuButton"
-        android:layout_width="0dp"
-        android:layout_height="95dp"
-        android:background="#0E0101"
-        android:text="PLAY"
-        android:textColor="#E6E6E6"
+        android:layout_width="300dp"
+        android:layout_height="75dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginRight="16dp"
+        android:background="@color/colorAccent"
+        android:fontFamily="@font/holtwood_one_sc"
+        android:text="@string/play"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        android:textColor="@android:color/black"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
