--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,7 +31,6 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
-<<<<<<< Updated upstream
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginBottom="225dp"
@@ -40,12 +39,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView">
-=======
-        android:text="@string/_0"
-        android:textColor="#000000"
-        android:textSize="36sp"
-        app:layout_constraintTop_toTopOf="parent" />
->>>>>>> Stashed changes
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -89,21 +82,28 @@
                 android:layout_height="175dp"
                 android:background="#D7FF33" />
         </LinearLayout>
+
+    </LinearLayout>
+
     <Button
         android:id="@+id/startButton"
-        android:layout_width="410dp"
-        android:layout_height="75dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:layout_marginLeft="32dp"
+        android:layout_marginTop="45dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginRight="32dp"
+        android:layout_marginBottom="125dp"
+        android:background="@drawable/button_pressed"
+        android:fontFamily="@font/holtwood_one_sc"
+        android:gravity="center"
         android:text="@string/start"
-        android:textColor="#000000"
-        android:textSize="30sp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginBottom="225dp"
-        android:orientation="vertical"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView"/>
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
 
     <TextView
         android:id="@+id/scoreNum"
