--- a/app/src/main/res/layout/activity_set_high_score.xml
+++ b/app/src/main/res/layout/activity_set_high_score.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/background"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior">
+    tools:context=".setHighScoreActivity">
 
     <TextView
         android:id="@+id/yourScoreText"
@@ -34,6 +34,7 @@
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
         android:fontFamily="@font/aldrich"
+        android:gravity="center"
         android:textAppearance="@style/TextAppearance.AppCompat.Display4"
         android:textColor="@android:color/black"
         app:layout_constraintEnd_toEndOf="parent"
