--- a/app/src/main/res/layout/activity_high_score.xml
+++ b/app/src/main/res/layout/activity_high_score.xml
@@ -124,6 +124,15 @@
                 android:textColor="@android:color/black" />
         </LinearLayout>
 
+        <TextView
+            android:id="@+id/noScoresText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/aldrich"
+            android:gravity="center"
+            android:text="@string/nothing_to_see_here_go_play_a_game_and_set_a_high_score"
+            android:textAppearance="@style/TextAppearance.AppCompat.Large" />
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="70dp"
