--- a/app/src/main/res/layout/activity_set_high_score.xml
+++ b/app/src/main/res/layout/activity_set_high_score.xml
@@ -86,14 +86,15 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
+        android:autofillHints=""
         android:ems="10"
         android:fontFamily="@font/aldrich"
+        android:gravity="center"
         android:inputType="textPersonName"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/yourNameText"
-        android:autofillHints="" />
+        app:layout_constraintTop_toBottomOf="@+id/yourNameText" />
 
     <Button
         android:id="@+id/submitButton"
